--- a/00_My-site.html
+++ b/00_My-site.html
@@ -8,7 +8,7 @@
     <title>HTML Course</title>
 </head>
 <body>
-    <img src="imgs/void.jpg" alt="its over" width="150">
+    <img src="void.jpg" alt="its over" width="150">
     <h1>BigDokich</h1>
 
     <p>
